--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,10 @@
 
     "name": "Joomla Issue Switcher",
     "description": "Switch between the current Joomla issue and the Github issue tracker",
-    "version": "1.0",
+    "version": "1.0.0",
     "icons": {
+        "16": "icon_16.png",
+        "48": "icon_48.png",
         "128": "icon_128.png"
     },
     "browser_action": {
@@ -12,7 +14,6 @@
         "default_popup": "popup.html"
     },
     "permissions": [
-        "activeTab",
-        "tabs"
+        "activeTab"
     ]
 }
