--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,20 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
 
     "name": "Joomla Issue Switcher",
     "description": "Switch between the current Joomla issue and the Github issue tracker",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "icons": {
         "16": "icon_16.png",
+        "32": "icon_32.png",
         "48": "icon_48.png",
         "128": "icon_128.png"
     },
-    "browser_action": {
+    "action": {
         "default_icon": "icon.png",
         "default_popup": "popup.html"
     },
     "permissions": [
-        "activeTab"
+        "tabs"
     ]
 }
